[gd_scene load_steps=13 format=2]

[ext_resource path="res://entity/unit/airship/cruiser/cruiser.obj" type="ArrayMesh" id=1]
[ext_resource path="res://entity/unit/airship/cruiser/cruiser.gd" type="Script" id=2]
[ext_resource path="res://entity/unit/airship/cruiser/engine.obj" type="ArrayMesh" id=3]
[ext_resource path="res://entity/unit/airship/cruiser/blade.obj" type="ArrayMesh" id=4]
[ext_resource path="res://entity/unit/airship/cruiser/flap.obj" type="ArrayMesh" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.615686, 0.615686, 0.615686, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.403922, 0.215686, 0, 1 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
albedo_color = Color( 0.878431, 0.537255, 0, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.423529, 0.368627, 0.329412, 1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.223529, 0.223529, 0.223529, 1 )

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.27451, 0.27451, 0.27451, 1 )

[sub_resource type="CylinderShape" id=4]
height = 5.0
radius = 0.8

[node name="cruiser" type="KinematicBody"]
script = ExtResource( 2 )

[node name="main_body" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
material/0 = SubResource( 1 )
material/1 = SubResource( 2 )
material/2 = SubResource( 3 )

[node name="engines" type="MeshInstance" parent="."]
mesh = ExtResource( 3 )
material/0 = SubResource( 5 )
material/1 = SubResource( 2 )
material/2 = SubResource( 6 )

[node name="blade_r" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.52901, 0, 0.620281 )
mesh = ExtResource( 4 )
material/0 = SubResource( 12 )
material/1 = SubResource( 2 )

[node name="blade_l" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.51829, 0, 0.620281 )
mesh = ExtResource( 4 )
material/0 = SubResource( 12 )
material/1 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.332638 )
shape = SubResource( 4 )

[node name="flaps" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.400416, 2.17122 )

[node name="flap" type="MeshInstance" parent="flaps"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.152122, 0.285095 )
mesh = ExtResource( 5 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false
material/0 = SubResource( 3 )
material/1 = SubResource( 2 )
